ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts.stderr
error[1005]: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:7:13
  |
7 | function a({while}) { }
  |             ^^^^^

error[1005]: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:8:14
  |
8 | function a1({public}) { }
  |              ^^^^^^

error[1359]: Expected an identifier, but found keyword
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:9:14
  |
9 | function a4([while, for, public]){ }
  |              ^^^^^

error[1359]: Expected an identifier, but found keyword
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:9:21
  |
9 | function a4([while, for, public]){ }
  |                     ^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:9:26
  |
9 | function a4([while, for, public]){ }
  |                          ^^^^^^

error[1359]: Expected an identifier, but found keyword
  --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:10:16
   |
10 | function a5(...while) { }
   |                ^^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
  --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration6/input.ts:11:16
   |
11 | function a6(...public) { }
   |                ^^^^^^

